syntax = "proto3";
package celestia.feeaddress.v1;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/feeaddress/types";

// EventFeeForwarded is emitted when tokens are forwarded to the fee collector.
// This event allows indexers and dashboards to track fee forwarding activity.
message EventFeeForwarded {
  // from_address is the address from which tokens were forwarded (the fee address)
  string from_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // amount is the tokens forwarded in Coins string format (e.g., "1000000utia")
  string amount = 2 [(cosmos_proto.scalar) = "cosmos.Coins"];
}
